fixed a bug with copyright text wrapping

--- a/src/common.blocks/copyright-bar/copyright-bar.scss
+++ b/src/common.blocks/copyright-bar/copyright-bar.scss
@@ -16,8 +16,8 @@
 }
 
 .copyright-bar__copyright {
-  float: left;
   height: 4.375rem;
 
   line-height: 4.375rem;
+  white-space: nowrap;
 }
