--- a/src/templates/landing-page/landing-page.scss
+++ b/src/templates/landing-page/landing-page.scss
@@ -10,7 +10,7 @@
   position: relative;
   z-index: 5;
 
-  height: 100vh;
+  height: max(640px, 100vh);
 }
 
 .landing__bg {
@@ -22,6 +22,8 @@
 
 .landing__bg-wrapper {
   position: relative;
+
+  min-height: 640px;
 }
 
 .landing__bg-image {
